--- a/Backend/models/template.html
+++ b/Backend/models/template.html
@@ -12,16 +12,38 @@
         clear: both;
         text-align: center;
       }
+
+      .nombre {
+        color: orange;
+        padding: 2px;
+        background-color: blue;
+        border-radius: 15px;
+        width: 60%;
+        margin-left: 270px;
+        margin-right: 270px;
+      }
+      .comentario {
+        background-color: blue;
+        color: orange;
+        width: 60%;
+        margin-left: 270px;
+        margin-right: 700px;
+        border-radius: 15px;
+      }
     </style>
   </head>
   <body>
     <h1>Comentario desde Portfolio</h1>
     <br />
-    <h1>{{nombre}} te ha dejado un comentario en tu portfolio</h1>
+    <h1 class="nombre">
+      {{nombre}} te ha dejado un comentario en tu portfolio
+    </h1>
     <br />
-    <h2>El comentario dice:</h2>
-    <p>{{comentario}}</p>
+    <div class="comentario">
+      <h2>El comentario dice:</h2>
+      <p>{{comentario}}</p>
+    </div>
     <br />
-    <p>Correo enviado desde: {{correo}}</p>
+    <p class="enviado desde">Correo enviado desde: {{correo}}</p>
   </body>
 </html>
