--- a/Backend/models/template.html
+++ b/Backend/models/template.html
@@ -13,15 +13,6 @@
         text-align: center;
       }
 
-      .nombre {
-        color: orange;
-        padding: 2px;
-        background-color: blue;
-        border-radius: 15px;
-        width: 60%;
-        margin-left: 270px;
-        margin-right: 270px;
-      }
       .comentario {
         background-color: blue;
         color: orange;
@@ -35,7 +26,18 @@
   <body>
     <h1>Comentario desde Portfolio</h1>
     <br />
-    <h1 class="nombre">
+    <h1
+      style="
+        color: orange;
+        padding: 2px;
+        background-color: blue;
+        border-radius: 15px;
+        width: 60%;
+        margin-left: 270px;
+        margin-right: 270px;
+      "
+      class="nombre"
+    >
       {{nombre}} te ha dejado un comentario en tu portfolio
     </h1>
     <br />
